add record scheudle endpoint
